# assaultcube-kernel

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  README.md  build.bat
driver/: CMakeLists.txt
driver/src/: entry.cpp
driver/src/communications/: communication.cpp  communication.h
driver/src/memory/: memory.cpp  memory.h  mouse.cpp  mouse.h  process.cpp  process.h
driver/src/utils/: crt.h  defs.h  utils.h
usermode/: CMakeLists.txt
usermode/src/: main.cpp
usermode/src/driver/: defs.h  driver.h
usermode/src/features/: globals.h
usermode/src/utils/: macros.h
usermode/src/window/: window_manager.cpp  window_manager.h
usermode/src/window/menu/: menu.hpp
